[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flyn_memory_router"]

[project]
name = "flyn-memory-router"
version = "0.1.0"
description = "Universal memory-ingestion router for Flyn (port 8400)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "httpx>=0.27",
  "slowapi>=0.1.9",
  "pyyaml>=6.0",
]

[project.scripts]
flyn-mem = "flyn_memory_router.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"
