[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flyn-orchestrator"
version = "0.1.0"
description = "Multi-channel dev-team-plus orchestrator for the Cora team (port 8300)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = [
  "flyn_orchestrator",
  "flyn_orchestrator.adapters",
  "flyn_orchestrator.adapters.channels",
  "flyn_orchestrator.adapters.notify",
  "flyn_orchestrator.adapters.pm",
  "flyn_orchestrator.backends",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
